--- a/index.html
+++ b/index.html
@@ -1,58 +1,94 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.svg" />
-    <link rel="stylesheet" href="style.css" />
-    <script src="main.js" defer></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"rel="stylesheet">
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./img/favicon-32x32.svg"
+    />
+
+    <!--CSS-->
+    <link rel="stylesheet" href="/assets/css/style.css" />
+
+    <!--Fonte ROBOTO-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+
+    <!--BOOTSTRAP-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
 
     <title>Valorant</title>
-</head>
-
-<body>
-    <header>
-        <nav class="nav">
-            <div class="nav__logo">
-                <img src="img/valorantlogo.png" alt="valorant-logo">
+  </head>
+  <body>
+    <header class="c-navbar">
+      <div class="container-xxl">
+        <div class="row">
+          <nav class="c-navbar__menu">
+            <div class="c-navbar__logo">
+              <a href="#">
+                <figure class="m-0">
+                  <img src="/assets/img/valorantlogo.png" alt="logo-valorant" />
+                </figure>
+              </a>
+            </div>
+            <div class="c-navbar__links">
+              <ul class="c-navbar__list m-0">
+                <li>
+                  <a href="#">Informações do Jogo</a>
+                </li>
+                <li>
+                  <a href="#">Mídia</a>
+                </li>
+                <li>
+                  <a href="#">Notícias</a>
+                </li>
+                <li>
+                  <a href="#">Placar</a>
+                </li>
+                <li>
+                  <a href="#">Suporte</a>
+                </li>
+                <li>
+                  <a href="#">Social</a>
+                </li>
+                <li>
+                  <a href="#">Esports</a>
+                </li>
+                <li>
+                  <a href="#">Mais</a>
+                </li>
+              </ul>
             </div>
 
-            <div class="nav__menu">
-                <ul class="nav__menu-list">
-                    <li class="nav__menu-content">
-                        <a href="#" class="nav__menu-link">Informações do Jogo</a>
-                    </li>
-                    <li class="nav__menu-content">
-                        <a href="#" class="nav__menu-link">Mídia</a>
-                    </li>
-                    <li class="nav__menu-content">
-                        <a href="#" class="nav__menu-link">Notícias</a>
-                    </li>
-                    <li class="nav__menu-content">
-                        <a href="#" class="nav__menu-link">Placar</a>
-                    </li>
-                    <li class="nav__menu-content">
-                        <a href="#" class="nav__menu-link">Suporte</a>
-                    </li>
-                    <li class="nav__menu-content">
-                        <a href="#" class="nav__menu-link">Social</a>
-                    </li>
-                    <li class="nav__menu-content">
-                        <a href="#" class="nav__menu-link">Esports</a>
-                    </li>
-                    <li class="nav__menu-content">
-                        <a href="#" class="nav__menu-link">Mais</a>
-                    </li>
-                </ul>
+            <div class="c-menu-mobile">
+                <div class="c-menu-mobile__line"></div>
+                <div class="c-menu-mobile__line"></div>
+                <div class="c-menu-mobile__line"></div>
             </div>
-        </nav>
+          </nav>
+        </div>
+      </div>
     </header>
-</body>
 
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="/assets/js/main.js" defer></script>
+  </body>
 </html>
