feat: Componente section-bg e section sobre

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./img/favicon-32x32.svg"
+      href="./assets/img/favicon-32x32.svg"
     />
 
     <!--CSS-->
@@ -79,14 +79,81 @@
             </div>
 
             <div class="c-menu-mobile">
-                <div class="c-menu-mobile__line"></div>
-                <div class="c-menu-mobile__line"></div>
-                <div class="c-menu-mobile__line"></div>
+              <div class="c-menu-mobile__line"></div>
+              <div class="c-menu-mobile__line"></div>
+              <div class="c-menu-mobile__line"></div>
             </div>
           </nav>
         </div>
       </div>
     </header>
+
+    <section class="c-section-fav">
+      <div class="container-xxl">
+        <div class="row">
+          <div class="c-section-fav__content">
+            <div class="c-section-fav__h1 col-6">
+              <h1 class="m-0">Seu lugar favorito sobre novidades de Valorant.</h1>
+            </div>
+            <div class="c-section-fav__line"></div>
+            <div class="c-section-fav__p col-4">
+              <p class="m-0">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+                leo quam, laoreet vitae suscipit quis, euismod porta neque.
+                Donec sagittis a eros quis feugiat.
+              </p>
+            </div>
+            <div class="c-section-fav___arrow">
+              <figure class="m-0">
+                <a href="#"
+                  ><img src="/assets/img/seta-baixo.png" alt="seta-baixo"
+                /></a>
+              </figure>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="c-section-about">
+      <div class="container-xxl">
+        <div class="row">
+          <div class="c-section-about__content">
+            <div class="c-section-about__h1">
+              <h1>Sobre o jogo Valorant.</h1>
+            </div>
+            <div class="c-section-about__line"></div>
+            <div class="c-section-about__p col-8">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+                leo quam, laoreet vitae suscipit quis, euismod porta neque.
+                Donec sagittis a eros quis feugiat.
+              </p>
+            </div>
+            <div class="c-section-about__btn">
+              <button class="c-section-about__button">Ver Mais</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="c-section-point">
+      <div class="container-xxl">
+        <div class="row">
+          <div class="c-section-point__content">
+            <div class="c-section-point__h1">
+              <h1>Algum pontos do jogo</h1>
+            </div>
+            <div class="c-section-fav__line"></div>
+            <div class="c-section-point__list">
+              
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="/assets/js/main.js" defer></script>
