--- a/index.html
+++ b/index.html
@@ -221,16 +221,19 @@
           <div class="row">
             <div class="c-section-carousel__content">
               <div class="c-section-carousel__box">
-                
-                  <div class="owl-carousel owl-theme">
-                    <div class="item"><img src="assets/img/img3-galeria.webp" alt=""></div>
-                    <div class="item"><img src="assets/img/img1-galeria.webp" alt=""></div>
-                    <div class="item"><img src="assets/img/img2-galeria.jpg" alt=""></div> 
-                  </div>
-                
+                 <div class="owl-carousel owl-theme">
+                  <div class="item"><img src="assets/img/img3-galeria.webp" alt="Imagem 2"></div>
+                  <div class="item"><img src="assets/img/img1-galeria.webp" alt="Imagem 1"></div>
+                  <div class="item"><img src="assets/img/img2-galeria.jpg" alt="Imagem 3"></div>
+              </div>
+              <div class="carousel-dots">
+                <span class="dot" data-index="2"></span>
+                <span class="dot active" data-index="0"></span>
+                <span class="dot" data-index="1"></span>
+            </div>
+                </div>
               </div>
             </div>
-          </div>
         </div>
     </section>
 
