End: Projeto cocluido

--- a/index.html
+++ b/index.html
@@ -36,13 +36,18 @@
     ></script>
 
     <!--CAROUSEL-->
-    <link rel="stylesheet" href="OwlCarousel2-2.3.4/dist/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="OwlCarousel2-2.3.4/dist/assets/owl.theme.default.min.css">
+    <link
+      rel="stylesheet"
+      href="OwlCarousel2-2.3.4/dist/assets/owl.carousel.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="OwlCarousel2-2.3.4/dist/assets/owl.theme.default.min.css"
+    />
     <title>Valorant</title>
   </head>
   <body>
-
-     <!--HEADER DA PAGINA-->
+    <!--HEADER DA PAGINA-->
     <header class="c-navbar">
       <div class="container-xxl">
         <div class="row">
@@ -88,31 +93,29 @@
               <div class="c-menu-mobile__line"></div>
               <div class="c-menu-mobile__line"></div>
             </div>
-
           </nav>
         </div>
       </div>
     </header>
-
+    <!-- Section Fav -->
     <section class="c-section-fav">
-
       <div class="c-section-fav__shadow">
-        <div class="container-xxl ">
+        <div class="container-xxl">
           <div class="row">
-
             <div class="c-section-fav__content">
-
               <div class="c-section-fav__h1 col-12 col-md-10 col-lg-6">
-                <h1 class="m-0">Seu lugar favorito sobre novidades de Valorant.</h1>
+                <h1 class="m-0">
+                  Seu lugar favorito sobre novidades de Valorant.
+                </h1>
               </div>
 
               <div class="c-section-fav__line"></div>
 
               <div class="c-section-fav__p col-12 col-md-7 col-lg-4">
                 <p class="m-0">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-                  leo quam, laoreet vitae suscipit quis, euismod porta neque.
-                  Donec sagittis a eros quis feugiat.
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Integer leo quam, laoreet vitae suscipit quis, euismod porta
+                  neque. Donec sagittis a eros quis feugiat.
                 </p>
               </div>
 
@@ -123,19 +126,16 @@
                   /></a>
                 </figure>
               </div>
-
             </div>
           </div>
         </div>
       </div>
     </section>
-
+    <!-- Sobre o jogo -->
     <section class="c-section-about">
-
       <div class="container-xxl">
         <div class="row">
           <div class="c-section-about__content">
-
             <div class="c-section-about__h1">
               <h1>Sobre o jogo Valorant.</h1>
             </div>
@@ -153,18 +153,15 @@
             <div class="c-section-about__btn">
               <button class="c-section-about__button">Ver Mais</button>
             </div>
-
           </div>
         </div>
       </div>
     </section>
-
+    <!-- Pontos sobre o jogo -->
     <section class="c-section-point">
-
       <div class="container-xxl">
         <div class="row">
           <div class="c-section-point__content">
-
             <div class="c-section-point__h1">
               <h1>Alguns pontos do jogo</h1>
             </div>
@@ -172,72 +169,97 @@
             <div class="c-section-point__line"></div>
             <div class="c-section-point__list">
               <div class="c-section-point__column">
-
                 <div class="c-section-point__icons">
                   <figure>
-                    <img src="/assets/img/pino-de-localizacao.png" alt="">
+                    <img src="/assets/img/pino-de-localizacao.png" alt="" />
                   </figure>
                   <h1>Vários Mapas</h1>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </p>
                 </div>
 
                 <div class="c-section-point__icons">
                   <figure>
-                    <img src="/assets/img/computador-portatil.png" alt="">
+                    <img src="/assets/img/computador-portatil.png" alt="" />
                   </figure>
                   <h1>Bem Otimizado</h1>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </p>
                 </div>
-
               </div>
 
               <div class="c-section-point__column">
                 <div class="c-section-point__icons">
                   <figure>
-                    <img src="/assets/img/globo.png" alt="">
+                    <img src="/assets/img/globo.png" alt="" />
                   </figure>
                   <h1>Servidores Globais</h1>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </p>
                 </div>
 
                 <div class="c-section-point__icons">
                   <figure>
-                    <img src="/assets/img/contorno-em-forma-de-coracao.png" alt="">
+                    <img
+                      src="/assets/img/contorno-em-forma-de-coracao.png"
+                      alt=""
+                    />
                   </figure>
                   <h1>Você vai adorar</h1>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </p>
                 </div>
-
               </div>
-            </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-
+    <!-- Carousel -->
     <section class="c-section-carousel">
-        <div class="container-xxl">
-          <div class="row">
-            <div class="c-section-carousel__content">
-              <div class="c-section-carousel__box">
-                 <div class="owl-carousel owl-theme">
-                  <div class="item"><img src="assets/img/img3-galeria.webp" alt="Imagem 2"></div>
-                  <div class="item"><img src="assets/img/img1-galeria.webp" alt="Imagem 1"></div>
-                  <div class="item"><img src="assets/img/img2-galeria.jpg" alt="Imagem 3"></div>
-              </div>
-              <div class="carousel-dots">
-                <span class="dot" data-index="2"></span>
-                <span class="dot active" data-index="0"></span>
-                <span class="dot" data-index="1"></span>
-            </div>
+      <div class="container-xxl">
+        <div class="row">
+          <div class="c-section-carousel__content">
+            <div class="c-section-carousel__box">
+              <div class="owl-carousel owl-theme">
+                <div class="item">
+                  <img src="assets/img/img3-galeria.webp" alt="Imagem 1" />
+                </div>
+                <div class="item">
+                  <img src="assets/img/img1-galeria.webp" alt="Imagem 2" />
+                </div>
+                <div class="item">
+                  <img src="assets/img/img2-galeria.jpg" alt="Imagem 3" />
                 </div>
               </div>
+
+              <!-- Setas de navegação -->
+              <div class="carousel-arrow-left" onclick="prevSlide()">
+                <button>
+                  <img src="assets/img/seta-esquerda (1).png" alt="" />
+                </button>
+              </div>
+              <div class="carousel-arrow-right" onclick="nextSlide()">
+                <button>
+                  <img src="assets/img/seta-direita (1).png" alt="" />
+                </button>
+              </div>
+              <!-- Pontos de navegação -->
+              <div class="carousel-dots">
+                <span class="dot" data-index="0"></span>
+                <span class="dot active" data-index="1"></span>
+                <span class="dot" data-index="2"></span>
+              </div>
             </div>
+          </div>
         </div>
+      </div>
     </section>
-
-
+    <!-- Baixar o Jogo -->
     <section class="c-section-baixar" id="baixar">
       <div class="container-xxl">
         <div class="row">
@@ -252,14 +274,15 @@
         </div>
       </div>
     </section>
-
-
+     <!-- Logo Riot -->
     <footer class="c-footer">
       <div class="container-xxl">
         <div class="row">
           <div class="c-footer__content">
             <div class="c-footer__riot">
-              <figure><a href="#"><img src="assets/img/logoRiot.png" alt=""></a></figure>
+              <figure>
+                <a href="#"><img src="assets/img/logoRiot.png" alt="" /></a>
+              </figure>
             </div>
           </div>
         </div>
