--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
 
     <!--CSS-->
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
 
     <!--Fonte ROBOTO-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
