--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="c-navbar__logo">
               <a href="#">
                 <figure class="m-0">
-                  <img src="./assets/img/valorantlogo.png" alt="logo-valorant" />
+                  <img src="assets/img/valorantlogo.png" alt="logo-valorant" />
                 </figure>
               </a>
             </div>
@@ -122,7 +122,7 @@
               <div class="c-section-fav___arrow">
                 <figure class="m-0">
                   <a href="#baixar"
-                    ><img src="./assets/img/seta-baixo.png" alt="seta-baixo"
+                    ><img src="assets/img/seta-baixo.png" alt="seta-baixo"
                   /></a>
                 </figure>
               </div>
@@ -171,7 +171,7 @@
               <div class="c-section-point__column">
                 <div class="c-section-point__icons">
                   <figure>
-                    <img src="./assets/img/pino-de-localizacao.png" alt="" />
+                    <img src="assets/img/pino-de-localizacao.png" alt="" />
                   </figure>
                   <h1>Vários Mapas</h1>
                   <p>
@@ -181,7 +181,7 @@
 
                 <div class="c-section-point__icons">
                   <figure>
-                    <img src="./assets/img/computador-portatil.png" alt="" />
+                    <img src="assets/img/computador-portatil.png" alt="" />
                   </figure>
                   <h1>Bem Otimizado</h1>
                   <p>
@@ -193,7 +193,7 @@
               <div class="c-section-point__column">
                 <div class="c-section-point__icons">
                   <figure>
-                    <img src="./assets/img/globo.png" alt="" />
+                    <img src="assets/img/globo.png" alt="" />
                   </figure>
                   <h1>Servidores Globais</h1>
                   <p>
@@ -204,7 +204,7 @@
                 <div class="c-section-point__icons">
                   <figure>
                     <img
-                      src="./assets/img/contorno-em-forma-de-coracao.png"
+                      src="assets/img/contorno-em-forma-de-coracao.png"
                       alt=""
                     />
                   </figure>
@@ -227,25 +227,25 @@
             <div class="c-section-carousel__box">
               <div class="owl-carousel owl-theme">
                 <div class="item">
-                  <img src="./assets/img/img3-galeria.webp" alt="Imagem 1" />
+                  <img src="assets/img/img3-galeria.webp" alt="Imagem 1" />
                 </div>
                 <div class="item">
-                  <img src="./assets/img/img1-galeria.webp" alt="Imagem 2" />
+                  <img src="assets/img/img1-galeria.webp" alt="Imagem 2" />
                 </div>
                 <div class="item">
-                  <img src="./assets/img/img2-galeria.jpg" alt="Imagem 3" />
+                  <img src="assets/img/img2-galeria.jpg" alt="Imagem 3" />
                 </div>
               </div>
 
               <!-- Setas de navegação -->
               <div class="carousel-arrow-left" onclick="prevSlide()">
                 <button>
-                  <img src="./assets/img/seta-esquerda (1).png" alt="" />
+                  <img src="assets/img/seta-esquerda (1).png" alt="" />
                 </button>
               </div>
               <div class="carousel-arrow-right" onclick="nextSlide()">
                 <button>
-                  <img src="./assets/img/seta-direita (1).png" alt="" />
+                  <img src="assets/img/seta-direita (1).png" alt="" />
                 </button>
               </div>
               <!-- Pontos de navegação -->
@@ -281,7 +281,7 @@
           <div class="c-footer__content">
             <div class="c-footer__riot">
               <figure>
-                <a href="#"><img src="./assets/img/logoRiot.png" alt="" /></a>
+                <a href="#"><img src="assets/img/logoRiot.png" alt="" /></a>
               </figure>
             </div>
           </div>
