--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             </div>
 
             <div class="c-section-about__btn">
-              <button class="c-section-about__button">Ver Mais</button>
+              <button class="c-section-about__button"><a href="https://playvalorant.com/pt-br/news/announcements/beginners-guide/">Ver Mais</a></button>
             </div>
           </div>
         </div>
@@ -265,10 +265,10 @@
         <div class="row">
           <div class="c-section-baixar__content">
             <div class="c-section-baixar__h1">
-              <h1>Baixe e jogo agora!</h1>
+              <h1>Baixe e jogue agora!</h1>
             </div>
             <div class="c-section-baixar__btn">
-              <button class="c-section-baixar__button">Ver Mais</button>
+              <button class="c-section-baixar__button"><a href="https://playvalorant.com/pt-br/download/">Ver Mais</a></button>
             </div>
           </div>
         </div>
