--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               <div class="c-section-point__column">
                 <div class="c-section-point__icons">
                   <figure>
-                    <img src="assets/img/pino-de-localizacao.png" alt="" />
+                    <img src="./assets/img/pino-de-localizacao.png" alt="" />
                   </figure>
                   <h1>Vários Mapas</h1>
                   <p>
@@ -181,7 +181,7 @@
 
                 <div class="c-section-point__icons">
                   <figure>
-                    <img src="assets/img/computador-portatil.png" alt="" />
+                    <img src="./assets/img/computador-portatil.png" alt="" />
                   </figure>
                   <h1>Bem Otimizado</h1>
                   <p>
@@ -193,7 +193,7 @@
               <div class="c-section-point__column">
                 <div class="c-section-point__icons">
                   <figure>
-                    <img src="assets/img/globo.png" alt="" />
+                    <img src="./assets/img/globo.png" alt="" />
                   </figure>
                   <h1>Servidores Globais</h1>
                   <p>
@@ -204,7 +204,7 @@
                 <div class="c-section-point__icons">
                   <figure>
                     <img
-                      src="assets/img/contorno-em-forma-de-coracao.png"
+                      src="./assets/img/contorno-em-forma-de-coracao.png"
                       alt=""
                     />
                   </figure>
@@ -227,13 +227,13 @@
             <div class="c-section-carousel__box">
               <div class="owl-carousel owl-theme">
                 <div class="item">
-                  <img src="assets/img/img3-galeria.webp" alt="Imagem 1" />
+                  <img src="./assets/img/img3-galeria.webp" alt="Imagem 1" />
                 </div>
                 <div class="item">
-                  <img src="assets/img/img1-galeria.webp" alt="Imagem 2" />
+                  <img src="./assets/img/img1-galeria.webp" alt="Imagem 2" />
                 </div>
                 <div class="item">
-                  <img src="assets/img/img2-galeria.jpg" alt="Imagem 3" />
+                  <img src="./assets/img/img2-galeria.jpg" alt="Imagem 3" />
                 </div>
               </div>
 
@@ -281,7 +281,7 @@
           <div class="c-footer__content">
             <div class="c-footer__riot">
               <figure>
-                <a href="#"><img src="assets/img/logoRiot.png" alt="" /></a>
+                <a href="#"><img src="./assets/img/logoRiot.png" alt="" /></a>
               </figure>
             </div>
           </div>
