--- a/index.html
+++ b/index.html
@@ -227,13 +227,13 @@
             <div class="c-section-carousel__box">
               <div class="owl-carousel owl-theme">
                 <div class="item">
-                  <img src="./assets/img/img3-galeria.webp" alt="Imagem 1" />
+                  <img src="assets/img/img3-galeria.webp" alt="Imagem 1" />
                 </div>
                 <div class="item">
-                  <img src="./assets/img/img1-galeria.webp" alt="Imagem 2" />
+                  <img src="assets/img/img1-galeria.webp" alt="Imagem 2" />
                 </div>
                 <div class="item">
-                  <img src="./assets/img/img2-galeria.jpg" alt="Imagem 3" />
+                  <img src="assets/img/img2-galeria.jpg" alt="Imagem 3" />
                 </div>
               </div>
 
