ajustes HTML e CSS

--- a/index.html
+++ b/index.html
@@ -97,21 +97,54 @@
         </div>
       </div>
     </header>
-    <!-- Section Fav -->
-    <section class="c-section-fav">
-      <div class="c-section-fav__shadow">
+
+    <main>
+      <!-- Section Fav -->
+      <section class="c-section-fav">
+        <div class="c-section-fav__shadow">
+          <div class="container-xxl">
+            <div class="row">
+              <div class="c-section-fav__content">
+                <div class="c-section-fav__h2 col-12 col-md-10 col-lg-6">
+                  <h2 class="m-0">
+                    Seu lugar favorito sobre novidades de Valorant.
+                  </h2>
+                </div>
+
+                <div class="c-section-fav__line"></div>
+
+                <div class="c-section-fav__p col-12 col-md-7 col-lg-4">
+                  <p class="m-0">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Integer leo quam, laoreet vitae suscipit quis, euismod porta
+                    neque. Donec sagittis a eros quis feugiat.
+                  </p>
+                </div>
+
+                <div class="c-section-fav___arrow">
+                  <figure class="m-0">
+                    <a href="#baixar"
+                      ><img src="assets/img/seta-baixo.png" alt="seta-baixo"
+                    /></a>
+                  </figure>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Sobre o jogo -->
+      <section class="c-section-about">
         <div class="container-xxl">
           <div class="row">
-            <div class="c-section-fav__content">
-              <div class="c-section-fav__h1 col-12 col-md-10 col-lg-6">
-                <h1 class="m-0">
-                  Seu lugar favorito sobre novidades de Valorant.
-                </h1>
+            <div class="c-section-about__content">
+              <div class="c-section-about__h2">
+                <h2 class="m-0">Sobre o jogo Valorant.</h2>
               </div>
 
-              <div class="c-section-fav__line"></div>
+              <div class="c-section-about__line"></div>
 
-              <div class="c-section-fav__p col-12 col-md-7 col-lg-4">
+              <div class="c-section-about__p col-12 col-md-11">
                 <p class="m-0">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                   Integer leo quam, laoreet vitae suscipit quis, euismod porta
@@ -119,168 +152,139 @@
                 </p>
               </div>
 
-              <div class="c-section-fav___arrow">
-                <figure class="m-0">
-                  <a href="#baixar"
-                    ><img src="assets/img/seta-baixo.png" alt="seta-baixo"
-                  /></a>
-                </figure>
+              <div class="c-section-about__btn">
+                <button class="c-section-about__button">Ver Mais</button>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-    <!-- Sobre o jogo -->
-    <section class="c-section-about">
-      <div class="container-xxl">
-        <div class="row">
-          <div class="c-section-about__content">
-            <div class="c-section-about__h1">
-              <h1>Sobre o jogo Valorant.</h1>
-            </div>
-
-            <div class="c-section-about__line"></div>
-
-            <div class="c-section-about__p col-12 col-md-11 col-lg-4">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-                leo quam, laoreet vitae suscipit quis, euismod porta neque.
-                Donec sagittis a eros quis feugiat.
-              </p>
-            </div>
-
-            <div class="c-section-about__btn">
-              <button class="c-section-about__button">Ver Mais</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Pontos sobre o jogo -->
-    <section class="c-section-point">
-      <div class="container-xxl">
-        <div class="row">
-          <div class="c-section-point__content">
-            <div class="c-section-point__h1">
-              <h1>Alguns pontos do jogo</h1>
-            </div>
-
-            <div class="c-section-point__line"></div>
-            <div class="c-section-point__list">
-              <div class="c-section-point__column">
-                <div class="c-section-point__icons">
-                  <figure>
-                    <img src="assets/img/pino-de-localizacao.png" alt="" />
-                  </figure>
-                  <h1>Vários Mapas</h1>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  </p>
-                </div>
-
-                <div class="c-section-point__icons">
-                  <figure>
-                    <img src="assets/img/computador-portatil.png" alt="" />
-                  </figure>
-                  <h1>Bem Otimizado</h1>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  </p>
-                </div>
+      </section>
+      <!-- Pontos sobre o jogo -->
+      <section class="c-section-point">
+        <div class="container-xxl">
+          <div class="row">
+            <div class="c-section-point__content">
+              <div class="c-section-point__h2">
+                <h2 class="m-0">Alguns pontos do jogo</h2>
               </div>
 
-              <div class="c-section-point__column">
-                <div class="c-section-point__icons">
-                  <figure>
-                    <img src="assets/img/globo.png" alt="" />
-                  </figure>
-                  <h1>Servidores Globais</h1>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  </p>
+              <div class="c-section-point__line"></div>
+              <div class="c-section-point__list">
+                <div class="c-section-point__column">
+                  <div class="c-section-point__icons">
+                    <figure class="m-0">
+                      <img src="assets/img/pino-de-localizacao.png" alt="" />
+                    </figure>
+                    <h2 class="m-0">Vários Mapas</h2>
+                    <p class="m-0">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    </p>
+                  </div>
+
+                  <div class="c-section-point__icons">
+                    <figure class="m-0">
+                      <img src="assets/img/computador-portatil.png" alt="" />
+                    </figure>
+                    <h2 class="m-0">Bem Otimizado</h2>
+                    <p class="m-0">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    </p>
+                  </div>
                 </div>
 
-                <div class="c-section-point__icons">
-                  <figure>
-                    <img
-                      src="assets/img/contorno-em-forma-de-coracao.png"
-                      alt=""
-                    />
-                  </figure>
-                  <h1>Você vai adorar</h1>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  </p>
+                <div class="c-section-point__column">
+                  <div class="c-section-point__icons">
+                    <figure class="m-0">
+                      <img src="assets/img/globo.png" alt="" />
+                    </figure>
+                    <h2 class="m-0">Servidores Globais</h2>
+                    <p class="m-0">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    </p>
+                  </div>
+
+                  <div class="c-section-point__icons">
+                    <figure class="m-0">
+                      <img
+                        src="assets/img/contorno-em-forma-de-coracao.png"
+                        alt=""
+                      />
+                    </figure>
+                    <h2 class="m-0">Você vai adorar</h2>
+                    <p class="m-0">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    </p>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-    <!-- Carousel -->
-    <section class="c-section-carousel">
-      <div class="container-xxl">
-        <div class="row">
-          <div class="c-section-carousel__content">
-            <div class="c-section-carousel__box">
-              <div class="owl-carousel owl-theme">
-                <div class="item">
-                  <img src="assets/img/img3-galeria.webp" alt="Imagem 1" />
+      </section>
+      <!-- Carousel -->
+      <section class="c-section-carousel">
+        <div class="container-xxl">
+          <div class="row">
+            <div class="c-section-carousel__content">
+              <div class="c-section-carousel__box">
+                <div class="owl-carousel owl-theme">
+                  <div class="item">
+                    <img src="assets/img/img3-galeria.webp" alt="Imagem 1" />
+                  </div>
+                  <div class="item">
+                    <img src="assets/img/img1-galeria.webp" alt="Imagem 2" />
+                  </div>
+                  <div class="item">
+                    <img src="assets/img/img2-galeria.jpg" alt="Imagem 3" />
+                  </div>
                 </div>
-                <div class="item">
-                  <img src="assets/img/img1-galeria.webp" alt="Imagem 2" />
-                </div>
-                <div class="item">
-                  <img src="assets/img/img2-galeria.jpg" alt="Imagem 3" />
-                </div>
-              </div>
 
-              <!-- Setas de navegação -->
-              <div class="carousel-arrow-left" onclick="prevSlide()">
-                <button>
-                  <img src="assets/img/seta-esquerda (1).png" alt="" />
-                </button>
-              </div>
-              <div class="carousel-arrow-right" onclick="nextSlide()">
-                <button>
-                  <img src="assets/img/seta-direita (1).png" alt="" />
-                </button>
-              </div>
-              <!-- Pontos de navegação -->
-              <div class="carousel-dots">
-                <span class="dot" data-index="0"></span>
-                <span class="dot active" data-index="1"></span>
-                <span class="dot" data-index="2"></span>
+                <!-- Setas de navegação -->
+                <div class="carousel-arrow-left" onclick="prevSlide()">
+                  <button>
+                    <img src="assets/img/seta-esquerda (1).png" alt="" />
+                  </button>
+                </div>
+                <div class="carousel-arrow-right" onclick="nextSlide()">
+                  <button>
+                    <img src="assets/img/seta-direita (1).png" alt="" />
+                  </button>
+                </div>
+                <!-- Pontos de navegação -->
+                <div class="carousel-dots">
+                  <span class="dot" data-index="0"></span>
+                  <span class="dot active" data-index="1"></span>
+                  <span class="dot" data-index="2"></span>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-    <!-- Baixar o Jogo -->
-    <section class="c-section-baixar" id="baixar">
-      <div class="container-xxl">
-        <div class="row">
-          <div class="c-section-baixar__content">
-            <div class="c-section-baixar__h1">
-              <h1>Baixe e jogue agora!</h1>
-            </div>
-            <div class="c-section-baixar__btn">
-              <button class="c-section-baixar__button">Ver Mais</button>
+      </section>
+      <!-- Baixar o Jogo -->
+      <section class="c-section-baixar" id="baixar">
+        <div class="container-xxl">
+          <div class="row">
+            <div class="c-section-baixar__content">
+              <div class="c-section-baixar__h2">
+                <h2 class="m-0">Baixe e jogue agora!</h2>
+              </div>
+              <div class="c-section-baixar__btn">
+                <button class="c-section-baixar__button">Ver Mais</button>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-     <!-- Logo Riot -->
+      </section>
+    </main>
+
+    <!-- Logo Riot -->
     <footer class="c-footer">
       <div class="container-xxl">
         <div class="row">
           <div class="c-footer__content">
             <div class="c-footer__riot">
-              <figure>
+              <figure class="m-0">
                 <a href="#"><img src="assets/img/logoRiot.png" alt="" /></a>
               </figure>
             </div>
