ajustes HTML e CSS

--- a/index.html
+++ b/index.html
@@ -158,36 +158,61 @@
             </div>
           </div>
         </div>
-<<<<<<< HEAD
+      </section>
+      <!-- Sobre o jogo -->
+      <section class="c-section-about">
+        <div class="container-xxl">
+          <div class="row">
+            <div class="c-section-about__content">
+              <div class="c-section-about__h1">
+                <h1>Sobre o jogo Valorant.</h1>
+              </div>
+
+              <div class="c-section-about__line"></div>
+
+              <div class="c-section-about__p col-12 col-md-11 col-lg-4">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Integer leo quam, laoreet vitae suscipit quis, euismod porta
+                  neque. Donec sagittis a eros quis feugiat.
+                </p>
+              </div>
+
+              <div class="c-section-about__btn">
+                <button class="c-section-about__button">Ver Mais</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
       <!-- Pontos sobre o jogo -->
       <section class="c-section-point">
         <div class="container-xxl">
           <div class="row">
             <div class="c-section-point__content">
-              <div class="c-section-point__h2">
-                <h2 class="m-0">Alguns pontos do jogo</h2>
+              <div class="c-section-point__h1">
+                <h1>Alguns pontos do jogo</h1>
               </div>
 
               <div class="c-section-point__line"></div>
               <div class="c-section-point__list">
                 <div class="c-section-point__column">
                   <div class="c-section-point__icons">
-                    <figure class="m-0">
-                      <img src="assets/img/pino-de-localizacao.png" alt="" />
+                    <figure>
+                      <img src="./assets/img/pino-de-localizacao.png" alt="" />
                     </figure>
-                    <h2 class="m-0">Vários Mapas</h2>
-                    <p class="m-0">
+                    <h1>Vários Mapas</h1>
+                    <p>
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </p>
                   </div>
 
                   <div class="c-section-point__icons">
-                    <figure class="m-0">
-                      <img src="assets/img/computador-portatil.png" alt="" />
+                    <figure>
+                      <img src="./assets/img/computador-portatil.png" alt="" />
                     </figure>
-                    <h2 class="m-0">Bem Otimizado</h2>
-                    <p class="m-0">
+                    <h1>Bem Otimizado</h1>
+                    <p>
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </p>
                   </div>
@@ -195,112 +220,27 @@
 
                 <div class="c-section-point__column">
                   <div class="c-section-point__icons">
-                    <figure class="m-0">
-                      <img src="assets/img/globo.png" alt="" />
+                    <figure>
+                      <img src="./assets/img/globo.png" alt="" />
                     </figure>
-                    <h2 class="m-0">Servidores Globais</h2>
-                    <p class="m-0">
+                    <h1>Servidores Globais</h1>
+                    <p>
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </p>
                   </div>
 
                   <div class="c-section-point__icons">
-                    <figure class="m-0">
+                    <figure>
                       <img
-                        src="assets/img/contorno-em-forma-de-coracao.png"
+                        src="./assets/img/contorno-em-forma-de-coracao.png"
                         alt=""
                       />
                     </figure>
-                    <h2 class="m-0">Você vai adorar</h2>
-                    <p class="m-0">
+                    <h1>Você vai adorar</h1>
+                    <p>
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </p>
                   </div>
-=======
-      </div>
-    </section>
-    <!-- Sobre o jogo -->
-    <section class="c-section-about">
-      <div class="container-xxl">
-        <div class="row">
-          <div class="c-section-about__content">
-            <div class="c-section-about__h1">
-              <h1>Sobre o jogo Valorant.</h1>
-            </div>
-
-            <div class="c-section-about__line"></div>
-
-            <div class="c-section-about__p col-12 col-md-11 col-lg-4">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-                leo quam, laoreet vitae suscipit quis, euismod porta neque.
-                Donec sagittis a eros quis feugiat.
-              </p>
-            </div>
-
-            <div class="c-section-about__btn">
-              <button class="c-section-about__button">Ver Mais</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Pontos sobre o jogo -->
-    <section class="c-section-point">
-      <div class="container-xxl">
-        <div class="row">
-          <div class="c-section-point__content">
-            <div class="c-section-point__h1">
-              <h1>Alguns pontos do jogo</h1>
-            </div>
-
-            <div class="c-section-point__line"></div>
-            <div class="c-section-point__list">
-              <div class="c-section-point__column">
-                <div class="c-section-point__icons">
-                  <figure>
-                    <img src="./assets/img/pino-de-localizacao.png" alt="" />
-                  </figure>
-                  <h1>Vários Mapas</h1>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  </p>
-                </div>
-
-                <div class="c-section-point__icons">
-                  <figure>
-                    <img src="./assets/img/computador-portatil.png" alt="" />
-                  </figure>
-                  <h1>Bem Otimizado</h1>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  </p>
-                </div>
-              </div>
-
-              <div class="c-section-point__column">
-                <div class="c-section-point__icons">
-                  <figure>
-                    <img src="./assets/img/globo.png" alt="" />
-                  </figure>
-                  <h1>Servidores Globais</h1>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  </p>
-                </div>
-
-                <div class="c-section-point__icons">
-                  <figure>
-                    <img
-                      src="./assets/img/contorno-em-forma-de-coracao.png"
-                      alt=""
-                    />
-                  </figure>
-                  <h1>Você vai adorar</h1>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  </p>
->>>>>>> e21a1a55007f8ec326d9b759b685493ec3c104cd
                 </div>
               </div>
             </div>
@@ -370,13 +310,8 @@
         <div class="row">
           <div class="c-footer__content">
             <div class="c-footer__riot">
-<<<<<<< HEAD
-              <figure class="m-0">
-                <a href="#"><img src="assets/img/logoRiot.png" alt="" /></a>
-=======
               <figure>
                 <a href="#"><img src="./assets/img/logoRiot.png" alt="" /></a>
->>>>>>> e21a1a55007f8ec326d9b759b685493ec3c104cd
               </figure>
             </div>
           </div>
