--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <div class="row">
             <div class="c-section-point__content">
               <div class="c-section-point__h2">
-                <h2>Alguns pontos do jogo</h2>
+                <h2 class="m-0">Alguns pontos do jogo</h2>
               </div>
 
               <div class="c-section-point__line"></div>
@@ -175,18 +175,18 @@
                     <figure>
                       <img src="./assets/img/pino-de-localizacao.png" alt="" />
                     </figure>
-                    <h2>Vários Mapas</h2>
-                    <p>
+                    <h2 class="m-0">Vários Mapas</h2>
+                    <p class="m-0">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </p>
                   </div>
 
                   <div class="c-section-point__icons">
-                    <figure>
+                    <figure class="m-0">
                       <img src="./assets/img/computador-portatil.png" alt="" />
                     </figure>
-                    <h2>Bem Otimizado</h2>
-                    <p>
+                    <h2 class="m-0">Bem Otimizado</h2>
+                    <p class="m-0">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </p>
                   </div>
@@ -194,24 +194,24 @@
 
                 <div class="c-section-point__column">
                   <div class="c-section-point__icons">
-                    <figure>
+                    <figure class="m-0">
                       <img src="./assets/img/globo.png" alt="" />
                     </figure>
-                    <h2>Servidores Globais</h2>
-                    <p>
+                    <h2 class="m-0">Servidores Globais</h2>
+                    <p class="m-0">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </p>
                   </div>
 
                   <div class="c-section-point__icons">
-                    <figure>
+                    <figure class="m-0">
                       <img
                         src="./assets/img/contorno-em-forma-de-coracao.png"
                         alt=""
                       />
                     </figure>
-                    <h2>Você vai adorar</h2>
-                    <p>
+                    <h2 class="m-0">Você vai adorar</h2>
+                    <p class="m-0">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </p>
                   </div>
@@ -284,7 +284,7 @@
         <div class="row">
           <div class="c-footer__content">
             <div class="c-footer__riot">
-              <figure>
+              <figure class="m-0">
                 <a href="#"><img src="./assets/img/logoRiot.png" alt="" /></a>
               </figure>
             </div>
